tests/error/global_func_already_defined.gw
// [contains] global function 'test' already defined for those arguments
function void test(){}
function void test(){}
